syntax = "proto3";


package pb;

service LogAPI {
    rpc Live (Empty) returns (stream Log) {
    }

    rpc Latest (AppLatestRequest) returns (AppResponse) {
    }
}

enum Level {
    info = 0;
    debug = 1;
    error = 2;
    fatal = 3;
    warning = 4;
    unknown = 5;
}

enum Type {
    file = 0;
    http = 1;
}

message Log {
    string app = 1;
    Level level = 2;
    bytes payload = 3;
    int64 time = 4;
    string message = 5;
    string file = 6;
    int32 line = 7;
    Type type = 8;
    string hostname = 9;
    string label = 10;

};

message Empty {
}

message AppRangeRequest {
    string app = 1;
    int64 from = 2;
    int64 to = 3;
}

message AppLatestRequest {
    string app = 1;
    int64 limit = 2;
}

message AppResponse {
    repeated Log logs = 1;
    string app = 2;
    string hash = 3;
}

